# gasclaw

./: .coverage  .dockerignore  .env.example  .gitignore  AI-AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  gasclaw.yaml.example  llms.txt  mkdocs.yml  pyproject.toml  pytest.ini
.beads/backup/: backup_state.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml  docs.yml
docs/: architecture.md  index.md  knowledge-base.md  migrating-from-openclaw-launcher.md  troubleshooting.md
docs/api/: bootstrap.md  config.md  health.md  key-pool.md  maintenance.md  migration.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: docker-deployment.md  gastown-integration.md  kimi-proxy.md  openclaw-telegram.md
docs/wiki/: Architecture.md  Configuration.md  Docker-Deployment.md  Gastown-Integration.md  Home.md  Installation.md  Kimi-Proxy.md  Knowledge-Base.md  OpenClaw-Telegram.md  Quick-Start.md  Troubleshooting.md
maintainer/: .env.example  Dockerfile  agent-bootstrap.md  agent-instructions.md  agent-soul.md  docker-compose.yml  entrypoint.sh
maintainer/data/config/: gasclaw.yaml
maintainer/knowledge/: ais-reference.md  beads-reference.md  gasclaw-architecture.md  gastown-reference.md  openclaw-reference.md
maintainer/scripts/: config-loader.py  deploy-team.py  gastown-status.py  gastown-status.sh  gateway-watchdog.py  generate-team-config.py  sasha-status.py  watchdog-ais.sh
maintainer/skills/gasclaw-config/: SKILL.md
maintainer/skills/gasclaw-config/scripts/: config.sh
maintainer/skills/gasclaw-logs/: SKILL.md
maintainer/skills/gasclaw-logs/scripts/: logs.sh
maintainer/skills/gasclaw-maintenance/: SKILL.md
maintainer/skills/gasclaw-repo/: SKILL.md
maintainer/skills/gasclaw-status/: SKILL.md
reference/: ais-cli.md  beads-cli.md  dolt-sql.md  gastown-cli.md  kimi-proxy.md  openclaw-config.md  openclaw-telegram.md
scripts/: update_test_counts.py  validate-openclaw-config.sh
skills/ais-orchestrator/: SKILL.md
skills/ais-orchestrator/scripts/: patrol.sh
skills/gastown-agents/: SKILL.md
skills/gastown-agents/scripts/: agent-logs.sh  agent-restart.sh  agent-status.sh
skills/gastown-health/: SKILL.md
skills/gastown-health/scripts/: gt-health.sh  gt-status.sh
skills/gastown-keys/: SKILL.md
skills/gastown-keys/scripts/: key-rotate.sh  key-status.sh
skills/gastown-update/: SKILL.md
skills/gastown-update/scripts/: apply-update.sh  check-update.sh
skills/gt-mesh-sync/: SKILL.md
src/gasclaw/: __init__.py  bootstrap.py  ci_monitor.py  cli.py  config.py  health.py  host_cli.py  logging_config.py  maintenance.py  migration.py  utils.py
src/gasclaw/gastown/: __init__.py  agent_config.py  gt_feed.py  installer.py  lifecycle.py
src/gasclaw/kimigas/: __init__.py  credit_checker.py  key_pool.py  proxy.py  rate_limit_handler.py
src/gasclaw/openclaw/: __init__.py  auth.py  doctor.py  forum_manager.py  installer.py  lifecycle.py  skill_manager.py  team_config.py
src/gasclaw/updater/: __init__.py  applier.py  checker.py  notifier.py
tests/: conftest.py
tests/integration/: test_bootstrap_integration.py  test_cli_integration.py  test_health_integration.py
tests/unit/: test_bootstrap.py  test_ci_monitor.py  test_cli.py  test_config.py  test_credit_checker.py  test_docker_workflow.py  test_forum_manager.py  test_gastown_agent_config.py  test_gastown_installer.py  test_gastown_lifecycle.py  test_gateway_watchdog.py  test_gt_feed.py  test_health.py  test_host_cli.py  test_init.py  test_kimi_credit_checker.py  test_kimigas_init.py  test_kimigas_key_pool.py  test_kimigas_proxy.py  test_kimigas_rate_limit_handler.py  test_logging_config.py  test_maintenance.py  test_migration.py  test_migration_openclaw.py  test_openclaw_auth.py  test_openclaw_doctor.py  test_openclaw_installer.py  test_openclaw_lifecycle.py  test_openclaw_skill_manager.py  test_team_config.py  test_update_test_counts.py  test_updater_applier.py  test_updater_checker.py  test_updater_notifier.py  test_utils.py  test_yaml_config.py
(+3 files in other folders)
