[project]
name = "gasclaw"
version = "0.2.0"
description = "Gastown + OpenClaw + KimiGas in one container"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.21.0,<0.25.0",
    "click>=8.0.0,<9.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "tomlkit>=0.13.0",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
    "ruff>=0.14.0",
]

[project.scripts]
gasclaw = "gasclaw.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gasclaw"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W", "B", "C4", "SIM", "PERF"]
