[project]
name = "gasclaw"
version = "0.4.0"
description = "Gastown + OpenClaw + KimiGas in one container"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Gastown Contributors"}]
keywords = ["ai", "agents", "gastown", "openclaw", "telegram", "kimi", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.21.0,<1.0.0",
    "click>=8.0.0,<9.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "tomlkit>=0.13.0,<1.0.0",
    "rich>=14.0.0,<16.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
    "ruff>=0.14.0",
    "mypy>=1.15.0",
    "pyyaml>=6.0.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
gasclaw = "gasclaw.host_cli:app"
gasclaw-container = "gasclaw.cli:app"

[project.urls]
Homepage = "https://github.com/gastown-publish/gasclaw"
Repository = "https://github.com/gastown-publish/gasclaw"
Documentation = "https://github.com/gastown-publish/gasclaw/wiki"
Issues = "https://github.com/gastown-publish/gasclaw/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gasclaw"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W", "B", "C4", "SIM", "PERF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.coverage.run]
source = ["src", "scripts"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pragma: no cover",
]
